[CSS] Fix products inside category on mobile with small width - part 2

--- a/thepphuongloan/wp-content/themes/thep/style_long.css
+++ b/thepphuongloan/wp-content/themes/thep/style_long.css
@@ -195,7 +195,7 @@ div.post-inner.inside ul li > div{
 }
 div.post-inner.inside ul.products li.product{
 	width: 30%;
-    /*float: left;*/
+    float: left;
 }
 div.post-inner.inside ul.products h3 {
     font-size: 10px;
